--- a/.babelrc
+++ b/.babelrc
@@ -3,5 +3,6 @@
     "@babel/preset-env",
     "@babel/preset-react"
   ],
-  "plugins": ["@babel/plugin-proposal-class-properties"]
+  // @babel/plugin-transform-runtime 注入npm 包 按需引入
+  "plugins": ["@babel/plugin-proposal-class-properties","@babel/plugin-transform-runtime"]
 }
