--- a/.babelrc
+++ b/.babelrc
@@ -4,5 +4,9 @@
     "@babel/preset-react"
   ],
   // @babel/plugin-transform-runtime 注入npm 包 按需引入
-  "plugins": ["@babel/plugin-proposal-class-properties","@babel/plugin-transform-runtime"]
+  "plugins": [
+    "@babel/plugin-proposal-class-properties",
+    "@babel/plugin-transform-runtime",
+    "react-hot-loader/babel"
+  ]
 }
