--- a/package.json
+++ b/package.json
@@ -54,8 +54,10 @@
     "webpackbar": "^5.0.0-3"
   },
   "dependencies": {
+    "@hot-loader/react-dom": "^17.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-hot-loader": "^4.13.0",
     "react-router": "^5.2.0",
     "react-router-config": "^5.1.1",
     "react-router-dom": "^5.2.0"
